added docker compose file, added unit test cases

--- a/UserManagement.API/appsettings.Development.json
+++ b/UserManagement.API/appsettings.Development.json
@@ -1,8 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Port": 5672
+  },
+  "MongoDB": {
+    "ConnectionString": "mongodb://localhost:27017"
   }
 }
