--- a/UserManagement.API/appsettings.json
+++ b/UserManagement.API/appsettings.json
@@ -1,9 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Port": 5672
   },
-  "AllowedHosts": "*"
+  "MongoDB": {
+    "ConnectionString": "mongodb://localhost:27017"
+  }
 }
